fix workflow multiline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,10 @@ jobs:
             -V revealjs-url=https://unpkg.com/reveal.js/
             -V theme=solarized
             --include-in-header=slides.css
-      - run: |
-        mkdir gh-pages
-        mv index.html gh-pages/
-        mv imgs gh-pages/imgs
+      - run: >
+          mkdir gh-pages
+          mv index.html gh-pages/
+          mv imgs gh-pages/imgs
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
